<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/enter_details_to_login"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_info_24"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text= "@string/don_t_have_an_account"
        android:textColor="#FF1100"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/signupNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#FF1100"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>